--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-diff-viewer",
+	"name": "@gesdisc/react-diff-viewer",
 	"version": "3.1.1",
 	"private": false,
 	"description": "A simple and beautiful text diff viewer component made with diff and React",
@@ -79,8 +79,8 @@
 		"webpack-dev-server": "^3.1.9"
 	},
 	"peerDependencies": {
-		"react": "^15.3.0 || ^16.0.0",
-		"react-dom": "^15.3.0 || ^16.0.0"
+        "react": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
+		"react-dom": "^15.3.0 || ^16.0.0 || ^17.0.0 || ^18.0.0"
 	},
 	"engines": {
 		"node": ">= 8"
