--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@gesdisc/react-diff-viewer",
+	"name": "joncarlson/react-diff-viewer",
 	"version": "3.1.1",
 	"private": false,
 	"description": "A simple and beautiful text diff viewer component made with diff and React",
